--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div id="digits">
                 <button class="button">7</button>
-                <button class="button">8</button>
+                <button class="button" id="num8">8</button>
                 <button class="button">9</button>
                 <button class="button">4</button>
                 <button class="button">5</button>
@@ -48,32 +48,9 @@
     </div>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- 
     &#247;
